--- a/CapaDatos/CapaDatosPostgresql.vbproj
+++ b/CapaDatos/CapaDatosPostgresql.vbproj
@@ -61,6 +61,7 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basic\BancoBD.vb" />
     <Compile Include="Basic\gestion_accesoBD.vb" />
     <Compile Include="Basic\registrarVBD.vb" />
     <Compile Include="Basic\unidad_negocioBD.vb" />
