--- a/CapaObjetos/CapaObjetosNegocio.vbproj
+++ b/CapaObjetos/CapaObjetosNegocio.vbproj
@@ -52,6 +52,7 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="basic\banco.vb" />
     <Compile Include="registrarv.vb" />
     <Compile Include="basic\rol.vb" />
     <Compile Include="bonificacion\destino_bonificacion.vb" />
