--- a/CapaLogicaNegocio/CapaLogicaNegocio.vbproj
+++ b/CapaLogicaNegocio/CapaLogicaNegocio.vbproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="basic\bancoManager.vb" />
+    <Compile Include="basic\CuentaCoManager.vb" />
     <Compile Include="basic\gestion_accesoManager.vb" />
     <Compile Include="basic\monedaManager.vb" />
     <Compile Include="basic\registrarvManager.vb" />
