--- a/Interfaz/Interfaz.vbproj
+++ b/Interfaz/Interfaz.vbproj
@@ -459,6 +459,12 @@
     <Compile Include="Mantenimiento\Basic\FrmRegistrar_VentaLis.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Mantenimiento\Catalogo\FrmCuentaCo.Designer.vb">
+      <DependentUpon>FrmCuentaCo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimiento\Catalogo\FrmCuentaCo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Mantenimiento\Catalogo\FrmCatalogo_Almacen.Designer.vb">
       <DependentUpon>FrmCatalogo_Almacen.vb</DependentUpon>
     </Compile>
@@ -2072,6 +2078,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenimiento\Catalogo\FrmCatalogo_Almacen.resx">
       <DependentUpon>FrmCatalogo_Almacen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mantenimiento\Catalogo\FrmCuentaCo.resx">
+      <DependentUpon>FrmCuentaCo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenimiento\Catalogo\FrmProducto_Precio.resx">
       <DependentUpon>FrmProducto_Precio.vb</DependentUpon>
